
- Added boundary elimination with device support for `SparseMatrix` and
  `HypreParMatrix`.
  
- When using `AssemblyLevel::FULL`, `FABilinearFormExtension::FormSystemMatrix`
  outputs an `OperatorHandle` containing a `SparseMatrix` in serial, and an
  `HypreParMatrix` in parallel (instead of a `ConstrainedOperator`).

- Added TMOP metrics for mesh untangling and worst-case quality improvement.

Version 4.4, released on March 21, 2022
=======================================

Integrations, testing and documentation
---------------------------------------
- Added support for the LLVM-based automatic differentiation tool Enzyme, see
  https://github.com/EnzymeAD/Enzyme. Build system flags and a convenience
  header are provided. The functionality and interaction are demonstrated in a
  new miniapp in miniapps/elasticity.


Linear and nonlinear solvers
----------------------------
- Added support for using the hypre library built with HIP support. Similar to
  the existing hypre + CUDA support, most of the MFEM examples and miniapps work
  transparently with hypre + HIP builds. This includes the BoomerAMG, AMS, and
  ADS solvers.

- Added a simple singleton class, Hypre, to automatically set hypre's global
  parameters, particularly GPU-relevant options. Updated parallel example codes
  and miniapps to call Hypre::Init() where appropriate.

- Added hipSPARSE support for sparse matrix-vector multiplications.

- More explicit and consistent formatting of the output of iterative solvers
  with the new IterativeSolver::PrintLevel options. See linalg/solvers.hpp.

Meshing improvements
--------------------
- New TMOP-based methods for hr-adaptivity, interface fitting, and tangential
  relaxation of high-order meshes.

- Added initial support for meshes with pyramidal elements, including several
  pyramidal meshes in the data/ directory and support for the lowest order H1,
  Nedelec, Raviart-Thomas, and L2 basis functions on pyramids.
